Student Year Groups moved to the Year Definition
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
+++ b/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
@@ -83,6 +83,9 @@ year:
     specialday:
         add: Add Special Day
         remove: Erase Special Day
+    studentyear:
+        add: Add Student Year Group
+        remove: Erase Student Year Group
 calendar:
     title: Define Calendars
     description: Create and modify calendar definitions.
@@ -99,6 +102,7 @@ calendar:
         year: Year
         terms: Terms
         specialDays: Special Days
+        studentYears: Student Years
     year:
         title: Manage Year
         return: Return
@@ -114,6 +118,7 @@ calendar:
         status: Only one calendar can be current. 
         terms: "Terms are sorted within the year by the First Day Date. Terms must exist within the year days, and must not overlap days in another term."
         specialDays: ""
+        studentYears: "Student Year Groups are sorted on the sequence within the year."
     placeholder:
         status: Select Status
     error:
@@ -127,6 +132,10 @@ calendar:
         action: Actions
     term:
         title: "Manage Terms in %name%"
+    studentYear:
+        title: "Manage Student Years in %name%"
+    studentyear:
+        add: New Student Year Group
     specialDay:
         title: "Manage Special Days in %name%"
         add: Add Special Day
@@ -213,10 +222,13 @@ groups:
             name: Year Name
             nameShort: Year Short Name
             sequence: Order Sequence
+            year: School Year
         help:
-            name: (Must be Unique)
+            unique: (Must be Unique in %year%)
+            name: (Must be Unique in %year%)
             nameShort: (Must be Unique)
-            sequence: (Must be Unique) Use to determine where a student will continue education after a year migration.
+            sequence: (Must be Unique in %year%) Use to determine where a student will continue education after a year migration.
+            year: Link the Student Year to a School Year
         unique:
             sequence: The sequence must be unique!
             name: The year name must be unique!
