Add Enrolment Bundle, Move Home Room to Enrolment
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -86,7 +86,9 @@ menu:
             manage: Manage Families
     Site: System
     Misc: Miscellaneous
-    templateDesign: Template Design 
+    templateDesign: Template Design
+    Enrolment: Enrolment
+    Student: Manage Students
     Person: People
     system: Organise
     reports:
