--- a/src/Busybee/CurriculumBundle/Resources/translations/BusybeeCurriculumBundle.en_GB.yml
+++ b/src/Busybee/CurriculumBundle/Resources/translations/BusybeeCurriculumBundle.en_GB.yml
@@ -4,14 +4,16 @@ course:
     label:
         name: Course Name
         version: Course Version
+        studentYear: Student Year
     add:
         title: Add Course
     placeholder:
         changeRecord: Select course to edit
+        studentYear: 'Select the year this course is taught'
     edit:
         title: Course Details
         description: ''
 curriculum:
     unique:
         name:
-            version: The name and version are not unique
+            studentYear: The name and student year combined are not unique.
