Remove Enrolment Bundle Compuser Update
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PaginationBundle/Resources/translations/BusybeePaginationBundle.en_GB.yml
+++ b/src/Busybee/PaginationBundle/Resources/translations/BusybeePaginationBundle.en_GB.yml
@@ -14,4 +14,5 @@ pagination:
 Family Name: Family Name
 Given Name: Given Name
 Name: Name
-Target Year: Target Year
+Course Target: Course Years
+Course Code: Course Code
