--- a/src/Busybee/CurriculumBundle/Resources/translations/BusybeeCurriculumBundle.en_GB.yml
+++ b/src/Busybee/CurriculumBundle/Resources/translations/BusybeeCurriculumBundle.en_GB.yml
@@ -5,7 +5,7 @@ course:
         name: Course Name
         code: Course Code
         version: Course Version
-        targetYear: Course Target
+        targetYear: Course Year(s)
     add:
         title: Add Course
     placeholder:
