--- a/src/Busybee/SystemBundle/Resources/translations/SystemBundle.en_GB.yml
+++ b/src/Busybee/SystemBundle/Resources/translations/SystemBundle.en_GB.yml
@@ -30,6 +30,10 @@ system:
             title: Edit Setting
             description: Change the value and description of settings.
             success: The setting was saved successfully.
+        create:
+            title: Create Setting(s)
+            description: ''
+            success: The setting was saved successfully.
         label:
             description: Setting Description
             value: Setting Value
@@ -208,3 +212,9 @@ Mrs: Mrs
 Ms:	Ms
 Miss: Miss
 Dr:	Dr
+setting:
+    create:
+        label:
+            setting: YAML Formatted Setting
+        placeholder:
+            setting: Use one or more settings in YAML format. Settings that already exist are ignored.
