Add TimeTable BUndle
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -89,8 +89,8 @@ menu:
     templateDesign: Template Design
     Enrolment: Enrolment
     Student: Manage Students
-    curriculum:
-        tab: Curriculum
+    learn:
+        tab: Learn
         course: Manage Courses
     Person: People
     system: Organise
