--- a/src/Busybee/PaginationBundle/Resources/translations/BusybeePaginationBundle.en_GB.yml
+++ b/src/Busybee/PaginationBundle/Resources/translations/BusybeePaginationBundle.en_GB.yml
@@ -17,3 +17,5 @@ Name: Name
 Course Target: Course Years
 Course Code: Course Code
 Activity Name: Activity Name
+Short Name: Short Name
+Year: Year
