End of Day 11th April 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
+++ b/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
@@ -226,6 +226,6 @@ groups:
             nameShort: The year short name must be unique!
 menu:
     campus:
-        resources: Campus Resources
+        spaces: Campus Resources
 window:
     calendar: Calendar
