End of Day 12 Apr 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
+++ b/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
@@ -226,6 +226,20 @@ groups:
             nameShort: The year short name must be unique!
 menu:
     campus:
-        spaces: Campus Resources
+        spaces: Spaces
+    department:
+        manage: Departments
 window:
     calendar: Calendar
+department:
+    edit:
+        title: Manage Departments
+        description: ''
+    label:
+        name: Department Name
+        nameShort: Department Code
+        type: Type
+        staff: Attached Staff
+    placeholder:
+        type: Select Department Type
+        departments: Add New Department
