End of Day 13 Apr 2017 Depart Staff added
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/app/Resources/translations/validators.en_GB.yml
+++ b/app/Resources/translations/validators.en_GB.yml
@@ -46,3 +46,7 @@ student:
 timetable:
     unique:
         year: This value must be unique within the year
+department:
+    staff:
+        invalid: Staff member list is not valid.
+        uniquestaff: %name% is not a unique Staff Member
