Nested Collection Timetable-Lines-LearningGroups
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
+++ b/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
@@ -6,6 +6,10 @@ timetable:
         add: Add line.
         remove: Remove line.
         header: Line %name%
+        learninggroup:
+            add: Add Learning Group
+            remove: Remove Learning Group
+            header: Learning Group
     label:
         name: Name
         nameShort: Short Name
