--- a/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
+++ b/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
@@ -10,6 +10,8 @@ timetable:
             add: Add Learning Group
             remove: Remove Learning Group
             header: Learning Group
+        placeholder:
+            learningGroups: Select Learning Group
     label:
         name: Name
         nameShort: Short Name
