--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -157,3 +157,7 @@ idletimeout:
     stay: 'Stay Connected'
     dialogue: 'No activity has been detected for %time% minutes.  You are about to be signed out of the system for security reasons.'
     timeRemaining: 'Time Remaining'
+year:
+    system:
+        current: '<span class="label label-success" title="You are working in the current system year.">%year%</span>'
+        warning: '<span class="label label-warning" title="Warning: You are not working in the current system year.  Changes made may not alter current details in the system. Proceed with caution.">%year%</span>'
