End of Work 22nd Apr 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
+++ b/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
@@ -291,3 +291,10 @@ grade:
         title: Remove Grade from Year
     add:
         title: Add Grade to Year
+
+student:
+    grade:
+        label:
+            grade: Select a Grade / Year
+        help:
+            year: The year selected must be unique for this student.
