Stop for Lunch 24th Apr 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
+++ b/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
@@ -50,7 +50,7 @@ campus:
             comment: Comment
         help:
             staff: ''
-            campus: (Required) The Campus on which this resource exists.
+            campus: The Campus on which this resource exists.
             capacity: Number of people that this space is designed to hold.
         placeholder:
             staff: Select a Home Room Teacher
@@ -252,7 +252,7 @@ department:
         departments: Add New Department
     staff:
         title: Department Staff
-        member: %name%
+        member: '%name%'
         add: New Staff Member
         label:
             member: Staff Member
