End of Day 25th Apr 2017 Added javascript button to button Extension Term in Year Delete Select tab on return.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
+++ b/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
@@ -80,6 +80,9 @@ year:
     term:
         add: Add Term
         remove: Erase Term
+        delete:
+            warning: '%name% is locked and cannot be removed'
+            sucess: '%name% has been removed successfully'
     specialday:
         add: Add Special Day
         remove: Erase Special Day
