Learning Groups Management
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -114,7 +114,9 @@ menu:
         manage: Manage Students
         activities: Activities
     timetable:
-        manage: Timetables
+        manage: Manage Timetables
+        title: Timetables
+        learninggroups: Learning Groups
 ajax:
     wait_message: saving data.. please wait.. 
 Security: Security
