--- a/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
+++ b/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
@@ -39,10 +39,16 @@ learninggroups:
         activities: Activity List
         year: Attach to Year
         course: Attach a Course
+        includeAll: Include all Students in the Grades
+        participants: Maximum Participants
+        test: Test Learning Groups
     description:
         manage: Create, edit and test a Learning Group
     help:
         activities: ''
+        includeAll: The total list is generated from the included activities, and the selected participants are tested against this list.
+        participants: Limit the participants to a maximum number.  A selection of zero (0) turns this test off.
+        test: Generate a report on the Learning Group
     placeholder:
         activity: Select an Activity for this Group
         year: Select the year
